[gd_scene load_steps=6 format=3 uid="uid://fm6a43s55maj"]

[ext_resource type="ArrayMesh" uid="uid://dp74uq1vvxf8k" path="res://models/planets/SE-0009-N.obj" id="1_r7ige"]
[ext_resource type="Texture2D" uid="uid://cb7teg8syxb27" path="res://models/planets/SE-0009-N.png" id="2_bxp0h"]
[ext_resource type="Script" path="res://scenes/player_planet.gd" id="3_aorp5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8wslm"]
albedo_texture = ExtResource("2_bxp0h")

[sub_resource type="SphereShape3D" id="SphereShape3D_7edoe"]
radius = 1.716

[node name="PlayerPlanet" type="MeshInstance3D"]
mesh = ExtResource("1_r7ige")
surface_material_override/0 = SubResource("StandardMaterial3D_8wslm")
script = ExtResource("3_aorp5")

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
shape = SubResource("SphereShape3D_7edoe")
target_position = Vector3(0, 0, 0)

[node name="LimitRight" type="VisibleOnScreenNotifier3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.96068, 0, 0)

[node name="LimitLeft" type="VisibleOnScreenNotifier3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.17168, 0, 0)
